index page tweaks

--- a/index.html
+++ b/index.html
@@ -177,7 +177,14 @@
   </script>
 </head>
 <body>
-<h3>Click on "Show Note" to start, then check off your answers to guess the note!</h3>
+
+<h3>First Position Flash Cards</h3>
+<p>Click on "Show Note" to start, then select</p>
+<ul>
+  <li>String</li>
+  <li>Finger</li>
+  <li>Note name</li>
+</ul>
 <p>"Show answer" will show the back of the flashcard if you are stuck.</p>
 <div id="container">
   <div id='note' class="ui-widget-content"></div>
